correcting my code x2